# culling

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
app/composables/: useTauri.ts
app/layouts/: default.vue
app/pages/: index.vue  project.vue
app/types/: database.ts  errors.ts  scan.ts  tauri.ts
docs/: ARCHITECTURE.md  CACHE_DIRECTORY.md  DEVELOPMENT.md  PRD.md  TESTING.md
src/: main.rs
src-tauri/: Cargo.toml  cullrs.db  tauri.conf.json
src-tauri/migrations/2025-01-01-000001_create_core_tables/: up.sql
src-tauri/migrations/2025-01-02-000001_add_thumbnail_path_to_assets/: down.sql  up.sql
src-tauri/src/: commands.rs  lib.rs  schema.rs
src-tauri/src/core/: duplicate.rs  exif.rs  hash.rs  image.rs  mod.rs  project.rs  scanner.rs  thumbnail.rs
src-tauri/src/database/: connection.rs  mod.rs  models.rs
src-tauri/src/database/repositories/: asset.rs  decision.rs  mod.rs  project.rs  variant_group.rs
src-tauri/src/services/: database.rs  hash.rs  mod.rs  perceptual.rs  scanner.rs  scoring.rs
test_data/folder_A/: dup_41_file_folder_D_23.txt  dup_47_file_folder_B_19.txt  file_folder_A_0.txt  file_folder_A_1.txt  file_folder_A_10.txt  file_folder_A_11.txt  file_folder_A_12.txt  file_folder_A_13.txt  file_folder_A_14.txt  file_folder_A_15.txt  file_folder_A_16.txt  file_folder_A_17.txt  file_folder_A_19.txt  file_folder_A_2.txt  file_folder_A_20.txt  file_folder_A_21.txt  file_folder_A_22.txt  file_folder_A_23.txt  file_folder_A_24.txt  file_folder_A_3.txt  file_folder_A_4.txt  file_folder_A_5.txt  file_folder_A_6.txt  file_folder_A_7.txt  file_folder_A_8.txt  file_folder_A_9.txt
test_data/folder_B/: dup_15_file_folder_D_4.txt  dup_36_file_folder_C_15.txt  file_folder_B_0.txt  file_folder_B_1.txt  file_folder_B_11.txt  file_folder_B_12.txt  file_folder_B_13.txt  file_folder_B_14.txt  file_folder_B_15.txt  file_folder_B_16.txt  file_folder_B_17.txt  file_folder_B_18.txt  file_folder_B_2.txt  file_folder_B_20.txt  file_folder_B_21.txt  file_folder_B_22.txt  file_folder_B_23.txt  file_folder_B_24.txt  file_folder_B_3.txt  file_folder_B_4.txt  file_folder_B_5.txt  file_folder_B_6.txt  file_folder_B_7.txt  file_folder_B_8.txt  file_folder_B_9.txt
test_data/folder_C/: dup_19_file_folder_D_20.txt  file_folder_C_0.txt  file_folder_C_1.txt  file_folder_C_10.txt  file_folder_C_11.txt  file_folder_C_12.txt  file_folder_C_13.txt  file_folder_C_14.txt  file_folder_C_16.txt  file_folder_C_17.txt  file_folder_C_18.txt  file_folder_C_19.txt  file_folder_C_2.txt  file_folder_C_20.txt  file_folder_C_21.txt  file_folder_C_22.txt  file_folder_C_23.txt  file_folder_C_24.txt  file_folder_C_3.txt  file_folder_C_4.txt  file_folder_C_5.txt  file_folder_C_6.txt  file_folder_C_7.txt  file_folder_C_8.txt  file_folder_C_9.txt
test_data/folder_D/: dup_35_file_folder_B_10.txt  dup_46_file_folder_A_18.txt  file_folder_D_0.txt  file_folder_D_1.txt  file_folder_D_10.txt  file_folder_D_11.txt  file_folder_D_12.txt  file_folder_D_13.txt  file_folder_D_14.txt  file_folder_D_15.txt  file_folder_D_16.txt  (+13 more)
(+13 files in other folders)
