[package]
name = "culling"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
walkdir = "2.0"
anyhow = "1.0"
image       = "0.25.6"
image_hasher  = "3.0.0"
dialoguer = "0.11.0"
chrono = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
indicatif = "0.17.11"
rayon = "1.6"
