[package]
name = "cullrs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
dialoguer = "0.11.0"
dirs = "5.0"
image       = "0.25.6"
image_hasher  = "3.0.0"
indicatif = "0.17.11"
rayon = "1.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
walkdir = "2.0"
blake3 = "1.8.2"

